* Added a new directory for a combined adytum.ling package.
* Moved coprora into adytum.ling.
* Moved wordgen into adytum.ling.
* Rmeoved old content from README.
* Removed old, bogus tests.
* Updated site content.
* Moved corpora into wordgen.
* Changed my mind about namespaces: wordgen is now the top-level namespace
(again).
* Removed old adytum directory.
* Moved Language class out of init.

2006.07.26

* Created a wordgen package.
* Added placeholders for worgen submodules.
* Added more alphabets, vowels, etc.
* Started converting the bin scripts to use the new Syntagamata code.
* Moved wordgen.py to wordgen/syntagmata.py.
* Removed the old lib dir.
* Moved exception and type code out of syntagmata and into the placeholders.
* Moved letters and word classes out of syn and into an elemants module.
* Moved utf-8 file and counter into a utilities module.
* Cleaned up some files.
* Split up the languages file into a subpackage.
* Added bin/generateMythgarthurWordLists.py.
* Added more corpora.
* Merged branch to trunk (-r5:22).
* Renamed the old "examples" directory to "old".
* Updated the site news.
* Updated menu links.
* Part of wordgen.syntagmata never got committed to svn; now it should be.
* Added the tmp dir that didn't get merged from branch.
* Removed the blank languages.py file.
* Added a general python script for generating word lists.
* Added generated word lists in tmp.

2006.07.24

* Created a UFTFile object for mangaing the codecs files.
* Created Letter, Vowel, Consonant, and Word objects to assist in generalizing
the code in LangGen.py.
* Cleaned up (removed) the code that depended on the old way of determining
vowels and consonants.
* Added corpra files for oldenglish and sanskrit.
* Finished the rewrite of LangGen (LangGen.Syntagmata).
* Added many more unit tests.
* Renamed LangGen to wordgen.
* Added support for writing new stats files.


2006.07.17

* Added new vowel, consonant, and alphabet sources.
* Added support for unicode/UTF-8.