@@ -11,23 +11,21 @@ setup(name="PyWordGen",
     author_email="duncan@adytums.us",
     url="http://pywordgen.sourceforge.net",
     packages=[
-        'adytum',
-        'adytum.ling',
-        'adytum.ling.corpora',
-        'adytum.ling.syntagma',
+        'wordgen',
+        'wordgen.corpora',
+        'wordgen.languages',
     ],
-    namespace_packages = ['adytum'],
-    data_files=[('adytum/ling/corpora',
-        ['adytum/ling/corpora/afrikaner_wordlist.txt',
-        'adytum/ling/corpora/arabic_wordlist.txt',
-        'adytum/ling/corpora/chinese_wordlist.txt',
-        'adytum/ling/corpora/english_wordlist.txt',
-        'adytum/ling/corpora/french_wordlist.txt',
-        'adytum/ling/corpora/german_wordlist.txt',
-        'adytum/ling/corpora/hindi_wordlist.txt',
-        'adytum/ling/corpora/japanese_wordlist.txt',
-        'adytum/ling/corpora/korean_wordlist.txt',
-        'adytum/ling/corpora/russian_wordlist.txt',
-        'adytum/ling/corpora/spanish_wordlist.txt']
+    data_files=[('wordgen/corpora',
+        ['wordgen/corpora/afrikaner_wordlist.txt',
+        'wordgen/corpora/arabic_wordlist.txt',
+        'wordgen/corpora/chinese_wordlist.txt',
+        'wordgen/corpora/english_wordlist.txt',
+        'wordgen/corpora/french_wordlist.txt',
+        'wordgen/corpora/german_wordlist.txt',
+        'wordgen/corpora/hindi_wordlist.txt',
+        'wordgen/corpora/japanese_wordlist.txt',
+        'wordgen/corpora/korean_wordlist.txt',
+        'wordgen/corpora/russian_wordlist.txt',
+        'wordgen/corpora/spanish_wordlist.txt']
     )],
 )
