@@ -1,0 +1,9 @@
+"""
+This module defines a way of extracting the corpora text files from the python
+library paths.
+"""
+basePath = './corpora'
+vowelFileTmpl = basePath + "/vowels/%s.txt"
+consonantFileTmpl = basePath + "/consonants/%s.txt"
+statsFileTmpl = basePath + "/stats/%s.txt"
+sourceFileTmpl = basePath + "/sources/%s.txt"
